# robosystems-xbrl-holon

./: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: claude.yml  create-release.yml  publish.yml  tag-release.yml  test.yml
output/: .gitignore
robosystems_xbrl_holon/: __init__.py  cli.py  config.py  model.py  query.py
robosystems_xbrl_holon/_vendor/arelle_plugins/EDGAR/: __init__.py
robosystems_xbrl_holon/_vendor/ontology/v1/: context.jsonld  shapes.ttl
robosystems_xbrl_holon/edgar/: __init__.py  client.py  download.py  rate_limit.py
robosystems_xbrl_holon/parse/: __init__.py  arelle_load.py  ids.py  to_model.py
robosystems_xbrl_holon/serialize/: __init__.py  classify.py  graph.py  holon.py
robosystems_xbrl_holon/serialize/_kernel/: bundle.py  context.py  holon.py  jsonld.py
tests/: conftest.py  test_config.py  test_edgar.py  test_parity.py  test_parse.py  test_query.py  test_serialize.py
